templates/joomla/css/custom.css
/*Homepage Redesign*/
.itemid-122 .container-fluid {
  padding-left:0;
  padding-right:0;
  max-width:100%;
}
.customcontainer{
  max-width:1170px;
  margin-left:auto;
  margin-right:auto;
  width:auto;
}
.itemid-122 #content{
  display:none;
}
.itemid-122 .footer {
  margin-top: 0;
}
.event img,.announcements img{
box-shadow:0 5px 15px -10px rgba(0, 0, 0, 1);
}
.lead {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
}

/*btn*/
.features .btn, .whyjoomla .btn,.feedshp .btn,.showcase .btn{
  padding:10px 20px;
  margin:20px 0;
  border-radius:50px;
  border:none;
}
.showcase .btn{
  margin:0;
}

/*hero*/
.moduletable.topbanner {
  margin: -10px 0 0;
  background: #25304f url("../../../images/homepage/header.jpg") no-repeat scroll center 70% / cover ;
}
.topbanner .container {
  padding-bottom: 50px;
  padding-top: 50px;
  background-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
}
.hero-overlay {
  background-color: rgba(37, 48, 79, 0.3);
  background-image: -webkit-linear-gradient(bottom, #0d111c 28%, transparent 42%), -webkit-radial-gradient(center top circle , transparent 68%, #0d111c 83%);
  background-image: linear-gradient(to top, #0d111c 28%, transparent 42%), radial-gradient(circle at center top , transparent 68%, #0d111c 83%);
  background-repeat: no-repeat;
  margin-bottom:-20px;
}
.hero-heading {
  -webkit-animation-delay: 0.5s;
          animation-delay: 0.5s;
  -webkit-animation-duration: 1.5s;
          animation-duration: 1.5s;
  color: #fff;
  margin: 0 auto 80px;
  max-width: 800px;
  text-shadow:1px 1px 1px #192136;
  font-size: 20px;
  font-weight: normal;
  line-height: 1.38462;
}
.hero-heading h2 {
  color: #fff;
  margin-bottom: 25px;
  font-size: 53px;
  font-weight: normal;
  line-height: 1.13208;
}
.hero-teaser article {
  background: #fff;
  border-radius: 2px;
  margin-bottom: 15px;
  -webkit-transition: all 0.2s ease-in 0s;
  transition: all 0.2s ease-in 0s;
  padding-top:30px;
}
.hero-teaser .hero-teaser-title {
  font-size: 26px;
  margin:28px 0;
}
.hero-teaser .hero-teaser-body {
  min-height: 80px;
  padding: 0 25px 0;
  font-size:14px;
}
.hero-teaser footer {
  font-size: 20px;
}
.hero-teaser footer a {
  background: #5091cd;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #fff;
  display: block;
  padding: 20px 30px;
  text-decoration: none;
}
.hero-teaser > div {
  -webkit-transform: scale(1);
          transform: scale(1);
  -webkit-transition: all 0.2s ease-in 0s;
  transition: all 0.2s ease-in 0s;
}
.hero-teaser > div:hover {
  -webkit-transform: scale(1.02);
          transform: scale(1.02);
}
.hero-teaser > div:hover article {
  box-shadow: 0 0 30px #0d111c;
}
.hero-teaser > div:first-child footer a {
  background: #89c764;
}
.hero-teaser > div:last-child footer a {
  background: #f27042;
}
.hero-teaser > div:first-child .icon-circled, .icon-circled-additional-secondary-olive {
  background: #89c764;
  color: #fff;
}
.hero-teaser .icon-circled, .icon-circled-primary {
  background: #5091cd none repeat scroll 0 0;
  color: #fff;
}
.hero-teaser > div:last-child .icon-circled, .icon-circled-secondary-orange {
  background: #f27042;
  color: #fff;
}
.fadeInUp, .hero-heading {
  -webkit-animation-name: fadeInUp;
          animation-name: fadeInUp;
}
.fadeInUp {
  -webkit-animation-name: fadeInUp;
  animation-name: fadeInUp;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
 }

  @-webkit-keyframes fadeInUp {
  0% {
  opacity: 0;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
  -webkit-transform: translate3d(0, 100%, 0);
  transform: translate3d(0, 100%, 0);
  }
  100% {
  opacity: 1;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
  -webkit-transform: none;
  transform: none;
  }
  }
  @keyframes fadeInUp {
  0% {
  opacity: 0;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
  -webkit-transform: translate3d(0, 100%, 0);
  transform: translate3d(0, 100%, 0);
  }
  100% {
  opacity: 1;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
  -webkit-transform: none;
  transform: none;
  }
  }  

.icon-circled-sm {
  font-size: 23px;
  height: 45px;
  line-height: 45px;
  width: 45px;
}
.topbanner .icon-circled-sm .svg-icon {
  height: 24px;
  margin: -2px 10px 0 0;
  width: 24px;
  line-height:24px;
}
.icon-circled .svg-icon {
  height: 50px;
  margin: -8px 34px 0 0;
  width: 50px;
  line-height:50px;
}
.svg-icon {
  display: inline-block;
  fill: currentcolor;
  vertical-align: middle;
  text-shadow:none;
}

/*Announcements*/
.moduletable.announcements{
  padding: 30px 0;
  background:#1b63a2;
  color:#fff;
}
.moduletable.announcements h3 a{
  color:#eee;
}
.announcements img{
  padding-top:15px;
}

/*Why Joomla*/
.moduletable.whyjoomla{
  padding: 30px 0;
}
.whyjoomla .span6:first-child {
  position: relative;
  -webkit-transform: translateY(30%);
          transform: translateY(30%);
}

/*Features*/
.features h2,.who h2,.why h2 {
  margin-bottom: 50px;
  font-size:30px;
}
.features h2{
  color: #fff;
}
.feature {
  padding: 15px 0;
  text-shadow: 1px 1px 1px #0d111c;
}
.feature .icon-circled {
  margin-bottom: 20px;
  -webkit-transform: scale(1);
          transform: scale(1);
  -webkit-transition: all 0.2s ease-in 0s;
  transition: all 0.2s ease-in 0s;
}
.feature .icon-circled img:hover {
    box-shadow: 0 0 30px #0d111c;
    -webkit-transform: scale(1.15);
            transform: scale(1.15);
}
.feature .icon-circled:hover {
    box-shadow: 0 0 30px #0d111c;
    -webkit-transform: scale(1.15);
            transform: scale(1.15);
}
.custom.features{
  background: #25304f;
  padding: 30px 0;
}
.icon-circled-lg {
  font-size: 50px;
  height: 100px;
  line-height: 100px;
  width: 100px;
}
.icon-circled {
  border-radius: 50%;
  display: inline-block;
  overflow: hidden;
}
/* ... */

